--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".Settings" />
         <activity android:name=".GameActivity" />
+        <activity android:name=".GameOverActivity"></activity>
     </application>
 
 </manifest>
